# sigil-solver

./: Cargo.toml  README.md
benches/: solver.rs
src/: arg_parsing.rs  bin.rs  board.rs  lib.rs  main.rs  sigils.rs
