[package]
name = "sigils"
version = "0.1.0"
edition = "2021"

[lib]
name = "sigils"
path = "src/lib.rs"

[[bin]]
name = "sigil_solver"
path = "src/bin.rs"

[dependencies]
argparse = "0.2.2"
criterion = "0.5.1"
gnuplot = "0.0.38"
num-derive = "0.3.3"
num-traits = "0.2.15"

[[bench]]
name = "solver"
harness = false

